[tool.poetry]
name = "alexofechoes_brain_games"
version = "0.1.1"
description = ""
authors = ["Alexander Bukharin <alexawm182@gmail.com>"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
