[tool.poetry]
name = "alexofechoes_brain_games"
version = "0.2.1"
description = ""
authors = ["Alexander Bukharin <alexawm182@gmail.com>"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
wemake-python-styleguide = "^0.8.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
